--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -2,11 +2,16 @@
 title: "index"
 author: "Rosemary"
 date: "November 30, 2017"
-output: html_document
+output:
+  html_document:
+    code_folding: hide
+    toc: true
+    toc_float: true
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
 ```
 
 ## R Markdown
@@ -15,9 +20,129 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
-summary(cars)
+## `geom_point`
+
+```{r scatterplot}
+
+#mpg
+
+ggplot(data=mpg, aes(x=displ, y=hwy)) +
+  geom_point()
+
+
+
 ```
+
+## `color`
+
+```{r color}
+
+#mpg
+
+ggplot(data=mpg, aes(x=displ, y=hwy, color=class)) +
+  geom_point()
+
+
+
+```
+
+
+
+## `shape`: need a black and white figure
+
+Changed `color` to `shape`
+
+```{r b&w}
+
+#mpg
+
+ggplot(data=mpg, aes(x=displ, y=hwy, shape=class)) +
+  geom_point()
+
+```
+
+##`size`
+
+```{r size}
+
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = cty, y = hwy, size = class, color = fl))
+```
+
+```{r fix color}
+ggplot(data = mpg, aes(x = displ, y = hwy)) +
+    geom_point(alpha = 0.4, color = "blue")
+
+```
+##Exercise 5.5
+
+```{r exercise1}
+
+     ggplot(data = mpg) + 
+      geom_point(aes(x = displ, y = hwy), color = "blue")
+```
+```{r exercise4}
+     ggplot(data = mpg) + 
+      geom_point(aes(x = displ, y = hwy), color = "blue")
+```
+
+##Geoms
+
+```{r geom_example1}
+
+ggplot(mpg, aes(x=drv, y=hwy)) +
+ geom_point()
+```
+
+###Boxplot
+```{r geom_example2}
+
+ggplot(mpg, aes(x=drv, y=hwy)) +
+ geom_boxplot()
+```
+
+###Violin plot
+```{r geom_example3}
+
+ggplot(mpg, aes(x=drv, y=hwy)) +
+ geom_violin()
+```
+
+##Multiple geoms
+
+```{r multi-geoms1}
+
+#manual code 
+ggplot(data =mpg) + 
+    geom_point(aes(x=displ, y=hwy)) +
+    geom_smooth(aes(x=displ, y=hwy))
+
+```
+```{r multi-geoms2}
+
+#simplified code for the same plot
+
+ggplot(data=mpg, aes(x=displ, y=hwy)) +
+    geom_point() +
+    geom_smooth()
+
+```
+
+##Customization
+
+```{r customize}
+
+ggplot(data=mpg, aes(x=displ, y=hwy))+
+  geom_point()+
+  geom_smooth()+
+  labs(title = "Relationship b/w engine size & MPG",
+       x = "Highway MPG", 
+       y="Engine displacement (liters)") +
+  theme_gray() +
+  theme(text = element_text(size = 14))
+
+```
+
 
 ## Including Plots
 
@@ -28,3 +153,80 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
+##Data Wrangling with `dplyr`
+
+```{r}
+
+gapminder <- readr::read_csv("https://raw.githubusercontent.com/OHI-Science/data-science-training/master/data/gapminder.csv")
+
+gapminder
+
+## useful functions to get to know your data:
+head(gapminder) # shows the first 6 rows of the data
+tail(gapminder) # shows the last 6 rows of the data
+
+head(gapminder, 30)
+tail(gapminder, 9)
+
+## To check out data structure
+str(gapminder)
+
+## To see column names
+names(gapminder)
+
+## To see the number of obs and variables
+dim(gapminder)
+ncol(gapminder) # To see number of variables
+nrow(gapminder) # To see number of observations
+
+## To combine data with `c`
+c(nrow(gapminder), ncol(gapminder))
+
+## Summary stats of the dataset
+summary(gapminder)
+
+## The above examples operated on the entire `gapminder` dataset. 
+
+## To look at a single variable
+head(gapminder$country)
+
+```
+
+## Working with diplyr
+
+###filter
+```{r}
+
+filter(gapminder, lifeExp < 29)
+filter(gapminder, country == "Mexico")
+
+#Example: Calculate mean life expectancy of Sweden
+Sweden <- filter(gapminder, country=="Sweden")  #name an object
+mean(Sweden$lifeExp) #calculate mean
+
+mean(filter(gapminder, country=="Sweden")$lifeExp)  #alternative
+##These are vectors (a single row or column, a value)
+
+##Pipe operator `%>%`
+gapminder%>%head()  #same as head(gapminder)
+gapminder%>%head(3)  #pulls top 3 obs
+
+##Let's use the %>% for the Sweden example
+gapminder %>% 
+  filter(country=="Sweden") %>% 
+  summarize(mean_lifeExp = mean(lifeExp)) 
+  ##tidyverse will always return a dataframe
+
+
+
+```
+
+
+
+`read_csv` is from the `readr` package (part of the tidyverse). It is not `read.csv`, which is part of base R. It displays data tables in a readable format.
+
+
+
+
